deploy/base/commerce/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commerce
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: commerce
  ports:
    - name: http
      port: 80
      targetPort: http
