deploy/base/commerce/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: commerce
spec:
  parentRefs:
    - name: palladium
      sectionName: commerce
  rules:
    - backendRefs:
        - name: commerce
          port: 80
